--- a/finalicons.html
+++ b/finalicons.html
@@ -1,27 +1,31 @@
-
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <title>בחירת אייקון</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      padding: 20px;
       background-color: #f9f9f9;
-      direction: rtl;
-      text-align: center;
+      overflow: hidden; /* ביטול סקרול */
+      touch-action: manipulation; /* ביטול זום בנייד */
     }
 
     h2 {
-      margin-bottom: 20px;
+      margin: 20px;
+      font-size: 20px;
+      text-align: center;
     }
 
     .icon-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+      gap: 12px;
+      padding: 10px 20px 30px;
+      max-width: 600px;
+      margin: auto;
     }
 
     .icon-option {
@@ -29,19 +33,16 @@
       border-radius: 12px;
       padding: 10px;
       cursor: pointer;
-      transition: border-color 0.3s ease;
+      transition: border-color 0.2s ease;
       background-color: white;
-      width: 80px;
       height: 90px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      font-size: 26px;
-    }
-
-    .icon-option:hover {
-      border-color: #666;
+      font-size: 28px;
+      user-select: none;
+      -webkit-user-drag: none;
     }
 
     .icon-option.selected {
@@ -50,29 +51,21 @@
     }
 
     .icon-label {
-      font-size: 12px;
+      font-size: 13px;
       margin-top: 6px;
       color: #333;
     }
 
-    #other-icons-container {
-      display: none;
-      margin-top: 20px;
-    }
-
-    #search-input {
-      padding: 10px;
-      width: 60%;
-      margin-bottom: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
+    @media (hover: hover) {
+      .icon-option:hover {
+        border-color: #666;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h2>בחירת אייקון</h2>
+  <h2>בחר אייקון לקטגוריה</h2>
 
   <div class="icon-grid" id="iconGrid">
     <div class="icon-option" data-value="home"><i class="fas fa-home"></i><div class="icon-label">בית</div></div>
@@ -84,50 +77,33 @@
     <div class="icon-option" data-value="book"><i class="fas fa-book"></i><div class="icon-label">לימודים</div></div>
     <div class="icon-option" data-value="utensils"><i class="fas fa-utensils"></i><div class="icon-label">אוכל</div></div>
     <div class="icon-option" data-value="dumbbell"><i class="fas fa-dumbbell"></i><div class="icon-label">ספורט</div></div>
-    <div class="icon-option" data-value="other" id="otherBtn"><i class="fas fa-ellipsis-h"></i><div class="icon-label">עוד</div></div>
-  </div>
-
-  <div id="other-icons-container">
-    <input type="text" id="search-input" placeholder="חיפוש אייקון...">
-    <div class="icon-grid" id="otherIcons">
-      <div class="icon-option" data-value="paw"><i class="fas fa-paw"></i><div class="icon-label">חיות</div></div>
-      <div class="icon-option" data-value="leaf"><i class="fas fa-leaf"></i><div class="icon-label">טבע</div></div>
-      <div class="icon-option" data-value="plane"><i class="fas fa-plane"></i><div class="icon-label">טיולים</div></div>
-      <div class="icon-option" data-value="paint-brush"><i class="fas fa-paint-brush"></i><div class="icon-label">אמנות</div></div>
-      <div class="icon-option" data-value="camera"><i class="fas fa-camera"></i><div class="icon-label">צילום</div></div>
-      <div class="icon-option" data-value="gamepad"><i class="fas fa-gamepad"></i><div class="icon-label">משחקים</div></div>
-      <div class="icon-option" data-value="music"><i class="fas fa-music"></i><div class="icon-label">מוזיקה</div></div>
-      <div class="icon-option" data-value="tree"><i class="fas fa-tree"></i><div class="icon-label">טבע</div></div>
-      <div class="icon-option" data-value="laptop"><i class="fas fa-laptop"></i><div class="icon-label">מחשב</div></div>
-      <div class="icon-option" data-value="bug"><i class="fas fa-bug"></i><div class="icon-label">פיתוח</div></div>
-    </div>
+    <div class="icon-option" data-value="user-check"><i class="fas fa-user-check"></i><div class="icon-label">משוב</div></div>
+    <div class="icon-option" data-value="file-alt"><i class="fas fa-file-alt"></i><div class="icon-label">דוח</div></div>
+    <div class="icon-option" data-value="hand-paper"><i class="fas fa-hand-paper"></i><div class="icon-label">הפסקה</div></div>
+    <div class="icon-option" data-value="paperclip"><i class="fas fa-paperclip"></i><div class="icon-label">קישור</div></div>
+    <div class="icon-option" data-value="calendar-alt"><i class="fas fa-calendar-alt"></i><div class="icon-label">תאריך יעד</div></div>
+    <div class="icon-option" data-value="tasks"><i class="fas fa-tasks"></i><div class="icon-label">משימות</div></div>
+    <div class="icon-option" data-value="clipboard-check"><i class="fas fa-clipboard-check"></i><div class="icon-label">בדיקה</div></div>
+    <div class="icon-option" data-value="bullhorn"><i class="fas fa-bullhorn"></i><div class="icon-label">הודעה</div></div>
+    <div class="icon-option" data-value="clock"><i class="fas fa-clock"></i><div class="icon-label">שעה</div></div>
+    <div class="icon-option" data-value="edit"><i class="fas fa-edit"></i><div class="icon-label">עריכה</div></div>
+    <div class="icon-option" data-value="check-circle"><i class="fas fa-check-circle"></i><div class="icon-label">סימון</div></div>
+    <div class="icon-option" data-value="project-diagram"><i class="fas fa-project-diagram"></i><div class="icon-label">פרויקט</div></div>
+    <div class="icon-option" data-value="clipboard"><i class="fas fa-clipboard"></i><div class="icon-label">לוח זמנים</div></div>
+    <div class="icon-option" data-value="sticky-note"><i class="fas fa-sticky-note"></i><div class="icon-label">פתקים</div></div>
+    <div class="icon-option" data-value="lightbulb"><i class="fas fa-lightbulb"></i><div class="icon-label">רעיון</div></div>
   </div>
 
   <script>
-    const allIcons = document.querySelectorAll('.icon-option');
-    const otherBtn = document.getElementById('otherBtn');
-    const otherContainer = document.getElementById('other-icons-container');
-    const searchInput = document.getElementById('search-input');
-    const otherIcons = document.getElementById('otherIcons').children;
+    const iconOptions = document.querySelectorAll('.icon-option');
 
-    allIcons.forEach(icon => {
+    iconOptions.forEach(icon => {
       icon.addEventListener('click', () => {
-        allIcons.forEach(i => i.classList.remove('selected'));
+        iconOptions.forEach(i => i.classList.remove('selected'));
         icon.classList.add('selected');
-        const selected = icon.getAttribute('data-value');
-        console.log("Selected icon:", selected);
-      });
-    });
-
-    otherBtn.addEventListener('click', () => {
-      otherContainer.style.display = "block";
-    });
-
-    searchInput.addEventListener('input', () => {
-      const val = searchInput.value.toLowerCase();
-      Array.from(otherIcons).forEach(icon => {
-        const type = icon.getAttribute('data-value');
-        icon.style.display = type.includes(val) ? "flex" : "none";
+        const selectedIconCode = icon.getAttribute('data-value');
+        console.log("Selected icon code:", selectedIconCode);
+        // כאן אפשר לשלוח לשרת או לשמור למשתמש
       });
     });
   </script>
