--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>בחירת אייקון</title>
+  <title>בחירת סמליל</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
