--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-  <h2>בחירת אייקון</h2>
+  <h2>בחירת סמליל </h2>
 
   <div class="icon-grid" id="iconGrid">
     <!-- ראשיים -->
