--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         
         // שליחה להורה
         window.parent.postMessage(iconURL, "*");
+         alert("כתובת האייקון: " + iconURL);
 
       });
     });
