--- a/index.html
+++ b/index.html
@@ -140,32 +140,35 @@
       "party": "https://img.icons8.com/ios/100/confetti.png"
     };
 
-     const allIcons = document.querySelectorAll('.icon-option');
-    const otherBtn = document.getElementById('otherBtn');
-    const hiddenIcons = document.querySelectorAll('.hidden-icon');
+  <script>
+  const allIcons = document.querySelectorAll('.icon-option');
+  const otherBtn = document.getElementById('otherBtn');
+  const hiddenIcons = document.querySelectorAll('.hidden-icon');
 
-    allIcons.forEach(icon => {
-      icon.addEventListener('click', () => {
-        const selected = icon.getAttribute('data-value');
+  allIcons.forEach(icon => {
+    icon.addEventListener('click', () => {
+      const selected = icon.getAttribute('data-value');
 
-        if (selected === 'other') {
-          hiddenIcons.forEach(icon => {
-            icon.style.display = (icon.style.display === "flex") ? "none" : "flex";
-          });
-          return;
-        }
+      if (selected === 'other') {
+        hiddenIcons.forEach(icon => {
+          icon.style.display = (icon.style.display === "flex") ? "none" : "flex";
+        });
+        return;
+      }
 
-        allIcons.forEach(i => i.classList.remove('selected'));
-        icon.classList.add('selected');
+      allIcons.forEach(i => i.classList.remove('selected'));
+      icon.classList.add('selected');
 
-        const iconURL = iconLinks[selected] || "";
-        console.log("Selected icon:", selected);
-        console.log("Icon URL:", iconURL);
-        window.parent.postMessage(iconURL, "*");
-       
-      });
+      const iconURL = iconLinks[selected] || "";
+      console.log("Selected icon:", selected);
+      console.log("Icon URL:", iconURL);
+
+      // שליחת האייקון ל־Thunkable
+      window.parent.postMessage({ type: "ICON_SELECTED", iconUrl: iconURL }, "*");
     });
-  </script>
+  });
+</script>
+
 
 </body>
 </html>
